# sports-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
deploy/: sports-mcp.service
docs/superpowers/plans/: 2026-05-02-empty-response-fallback.md  2026-05-02-live-score-completed-and-scheduled.md  2026-05-02-sports-mcp.md  2026-05-02-standings-season-awareness.md
docs/superpowers/specs/: 2026-05-02-empty-response-fallback-design.md  2026-05-02-live-score-completed-and-scheduled-design.md  2026-05-02-sports-mcp-design.md  2026-05-02-standings-season-awareness-design.md
scripts/: harvest_teams.py  smoke.py
sports_mcp/: __main__.py  _types.py  aliases.py  cache.py  espn.py  format.py  server.py  teams_data.py  tools.py
tests/: test_aliases.py  test_cache.py  test_espn.py  test_format.py  test_tools.py
tests/fixtures/: nba_scoreboard.json  nba_team_schedule.json  nhl_standings.json
